<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_speak_up_logo"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/speakuplogo"
        android:src="@drawable/speak_up_ke_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_speak_up_logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="+25470000000"
            android:hint="@string/hint_mobile_number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_mobile_number"
        app:passwordToggleDrawable="@drawable/toggle_pass"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_forgot_your_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/layout_password"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/hint_login"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/layout_password"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/hint_sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />


</android.support.constraint.ConstraintLayout>